--- a/style.css
+++ b/style.css
@@ -7,9 +7,8 @@
     text-align: center;
 }
 
-
-.navbar {
-    background-color: slategrey;
+.jumbotron {
+    background-color: white;
 }
 
 .navbar-brand {
