--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-.col, .col-8, .col-4, .col-9, .container{
-    text-align: center;
-}
+
 
 .top-col {
     height: 60px;
@@ -14,11 +12,13 @@
 .navbar-brand {
     background-color:slateblue;
     border-radius: 5px;
+    box-shadow: 2px 2px darkolivegreen;
 }
 
 .navbar-nav {
     background-color: plum;
     border-radius: 5px;
+    box-shadow:2px 2px darkolivegreen;
 }
 
 
